# rendercv-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
mcp_server/: __init__.py  app.py  auth.py  oauth_routes.py
tests/: test_oauth.py
