[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rendercv-mcp"
version = "0.1.0"
description = "RenderCV as an MCP server with OAuth 2.1 PKCE for claude.ai"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "starlette>=0.41.0",
    "rendercv[full]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
